--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,16 @@
-# Byte-compiled / optimized / DLL files
-src/__pycache__
-*.py[cod]
-
+#   Binaries for programs and plugins
 .vscode/
-.gitignore
+*.so
+*.dylib
+bin/*
+
+#   Test binary, built with `go test -c`
+*.test
+
+#   Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+#   Dependency directories (remove the comment below to include it)
+#   vendor/
+
+atlasDB.env
