Improving golang builg script

--- a/build.cfg
+++ b/build.cfg
@@ -1,28 +1,30 @@
 {
-    "projetct_name": "personaLib",
-    "projetct_description": "personaLib: a personal library inventory web application",
-    "projetct_packages": [
+    "project": "personaLib",
+    "description": "personaLib: a personal library inventory web application",
+    "source_directory": ".",
+    "source": [
+        "app.go",
+        "main.go"
+    ],
+    "packages": [
         "controller",
         "model",
-        "store",
+        "store"
     ],
-    "project_directory": ".",
-    "project_source": [
-        "app.go",
-        "main.go",
-    ],
-    "project_dependencies": [
+    "target": "personaLib",
+
+    "dependencies": [
         "github.com/gorilla/mux",
         "go.mongodb.org/mongo-driver/mongo",
         "go.mongodb.org/mongo-driver/mongo/options",
         "go.mongodb.org/mongo-driver/bson"
     ],
-    "project_integration_tests": [
+
+    "integration_tests": [
         {
-            "description": "APIs integration test"
+            "description": "APIs integration test",
             "environment": "Localhost.postman_environment.json",
             "collection": "Integrated Tests.postman_collection.json"
         }
-    ],
-    "project_target": "personaLib"
+    ]
 }
