Refactoring CLI arg parsing in build script

--- a/build.cfg
+++ b/build.cfg
@@ -23,6 +23,7 @@
     "integration_tests": [
         {
             "description": "APIs integration test",
+            "tool": "newman",
             "environment": "Localhost.postman_environment.json",
             "collection": "Integrated Tests.postman_collection.json"
         }
