Refactoring verify target in build script

--- a/build.cfg
+++ b/build.cfg
@@ -24,8 +24,8 @@
         {
             "description": "APIs integration test",
             "tool": "newman",
-            "environment": "Localhost.postman_environment.json",
-            "collection": "Integrated Tests.postman_collection.json"
+            "environment": "test/Localhost.postman_environment.json",
+            "collection": "test/Integrated Tests.postman_collection.json"
         }
     ]
 }
