--- a/build.cfg
+++ b/build.cfg
@@ -20,12 +20,15 @@
         "go.mongodb.org/mongo-driver/bson"
     ],
 
+    "test_directory": "test",
     "integration_tests": [
         {
             "description": "APIs integration test",
             "tool": "newman",
-            "environment": "test/Localhost.postman_environment.json",
-            "collection": "test/Integrated Tests.postman_collection.json"
+            "environment": "Localhost.postman_environment.json",
+            "collection": "Integrated Tests.postman_collection.json"
         }
-    ]
+    ],
+
+    "docker_file": "Dockerfile"
 }
