--- a/build.cfg
+++ b/build.cfg
@@ -20,6 +20,9 @@
         "go.mongodb.org/mongo-driver/bson"
     ],
 
+    "build_flags": "",
+    "test_flags": "",
+
     "test_directory": "test",
     "integration_tests": [
         {
