--- a/localhost.env
+++ b/localhost.env
@@ -1,3 +1,3 @@
 DATAFILENAME=
-DATABASEURL=mongodb+srv://<user>:<passwd>@bookshelf.vke0h.mongodb.net/Bookshelf?retryWrites=true&w=majority
+DATABASEURL=mongodb://localhost:27017/Bookshelf?retryWrites=true&w=majority
 SERVICEPORT=8080
