Using Docker-compose for the verify target

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -75,4 +75,4 @@ jobs:
         shell: bash
         run: |
           cd ${HOME_PATH}
-          echo ./build.sh verify
+          ./build.sh verify
