Adjusts in the Docker-compose use

--- a/build.cfg
+++ b/build.cfg
@@ -33,5 +33,6 @@
         }
     ],
 
-    "docker_file": "Dockerfile"
+    "docker_file": "Dockerfile",
+    "docker_compose_file": "docker-compose.yml"
 }
