--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,25 @@
 version: "3.3"
 services:
+  personalib:
+    image: "personalib"
+    depends_on:
+      - "mongo"
+    ports:
+      - "127.0.0.1:8080:8080/tcp"
+    environment:
+      - DATABASEURL=mongodb://peronalibdb:27017/Bookshelf?retryWrites=true&w=majority
+      - SERVICEPORT=8080
+
   mongo:
     image: "mongo:latest"
+    hostname: peronalibdb
     ports:
-      - "27017:27017"
-    command: --config /etc/mongo/mongod.conf
+      - "127.0.0.1:27017:27017/tcp"
+    expose:
+      - "27017"
+    #command: [ "--config", "/etc/mongo/mongod.conf" ]
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=
-      - MONGO_INITDB_ROOT_PASSWORD=
       - MONGO_INITDB_DATABASE=Bookshelf
-    volumes:
-      - ./config:/etc/mongo
-      - ./script:/docker-entrypoint-initdb.d
-
-  personalib:
-    build: .
-    ports:
-      - "8080:8080"
-    environment:
-      - DATABASEURL=mongodb://mongo:27017/Bookshelf?retryWrites=true&w=majority
-      - SERVICEPORT=8080
+    #volumes:
+    #  - ./config/mongod.conf:/etc/mongo/mongod.conf
+    #  - ./script/createDatabase.js:/docker-entrypoint-initdb.d/createDatabse.js
