--- a/config/mongod.conf
+++ b/config/mongod.conf
@@ -1,6 +1,6 @@
 systemLog:
-   verbosity: 0
-   quiet: true
+   verbosity: 5
+   quiet: false
    destination: file
    path: "/var/log/mongodb/mongod.log"
    logAppend: true
